src/pages/Home/HomePage.module.css
.home-page {
	display: grid;
	grid-template-rows: 1fr auto;
	height: 100dvh;
	gap: 12px;

	position: relative;
	overflow: hidden;

	--margin: 24px;
	@media (max-width: 600px) {
		--margin: 16px;
	}
	@media (max-width: 450px) {
		--margin: 8px;
	}
	@media (max-width: 450px) {
		font-size: var(--text-semi-small);
	}
	@media (max-width: 400px) {
		font-size: var(--text-small);
	}

	.main-container {
		overflow-y: auto;

		header {
			@media (pointer: coarse) {
				position: static;
			}
		}

		main {
			display: flex;
			flex-direction: column;
			align-items: center;

			margin: var(--margin);
			margin-top: 24px;
			margin-bottom: 0;

			gap: 36px;
			@media (max-width: 600px) {
				margin-top: 20px;
				gap: 30px;
			}
			@media (max-width: 450px) {
				margin-top: 16px;
				gap: 24px;
			}

			.spinner-container {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				display: grid;
			}
		}
	}

	.controls-container {
		display: flex;
		justify-content: center;
		margin: 0 var(--margin);

		transition: transform 0.3s ease;
		&.floating {
			z-index: 1;
			position: absolute;
			bottom: 0;
			left: 0;
			right: 0;

			&::before {
				content: "";
				position: absolute;
				bottom: 100%;
				width: 100%;
				height: 100%;
				transition: height 0.3s ease;
			}
			&:is(:hover, :has(:focus-visible)) {
				&::before {
					height: 0;
				}
			}
			&:not(:hover, :has(:focus-visible)) {
				transform: translateY(calc(100% + 5px));
			}
		}
	}
}

.controls {
	display: flex;
	box-sizing: border-box;
	width: 100%;
	max-width: 1000px;
	margin-bottom: 6px;
	padding: 20px;
	align-items: center;
	justify-content: center;
	background-color: var(--bg-secondary);

	outline: 1px solid var(--text-tertiary);
	&:is(:focus-within, :hover) {
		outline-color: var(--accent);
		[data-is-zack="true"] & {
			outline-width: 2px;
		}
	}

	gap: 48px;
	@media (max-width: 600px) {
		gap: 32px;
	}
	@media (max-width: 450px) {
		gap: 24px;
	}

	.slider {
		justify-self: center;
		flex: 1;
		max-width: 650px;
	}
}

.table {
	th {
		background-color: rgb(from var(--accent) r g b / 0.9);
		color: var(--bg-primary);
		[data-is-zack="true"] & {
			color: white;
		}
	}

	td {
		height: 24px;
	}

	tr {
		&:not(:first-child) {
			&:nth-child(even) {
				background-color: var(--bg-primary);
			}
			&:nth-child(odd) {
				background-color: var(--bg-secondary);
			}
		}
	}
}

.summary-table {
	width: min(80%, 400px);
	border-collapse: collapse;

	td,
	th {
		border: 1px solid var(--text-tertiary);
		white-space: nowrap;
	}

	td {
		&:first-child {
			text-align: left;
			width: 25%;
		}
		&:not(:first-child) {
			text-align: center;
		}

		.type-cell {
			display: flex;
			align-items: center;
			justify-content: space-between;
			gap: 8px;

			.icon {
				font-size: var(--text-small);
				@media (max-width: 450px) {
					font-size: var(--text-very-small);
				}
			}
		}
	}
}

.ranking-table {
	display: grid;
	justify-content: center;
	align-content: center;
	width: min(100%, 775px);

	grid-template-columns: auto 3fr repeat(4, 1fr);
	@media (max-width: 900px) {
		grid-template-columns: auto 2.5fr repeat(4, 1fr);
	}
	@media (max-width: 800px) {
		grid-template-columns: auto 2fr repeat(4, 1fr);
	}
	@media (max-width: 700px) {
		grid-template-columns: auto 1.5fr repeat(4, 1fr);
	}

	tbody {
		display: contents;
	}

	tr:first-child {
		background-color: var(--bg-primary);
		padding-top: 12px;
	}

	th,
	td {
		min-width: 0;

		/* manual border-collapse since it's not supported in grid */
		border-right: 1px solid var(--text-tertiary);
		border-bottom: 1px solid var(--text-tertiary);
		&:first-child {
			border-left: 1px solid var(--text-tertiary);
			min-width: 2ch;
		}

		.cell {
			display: flex;
			height: 100%;
			align-items: center;
			justify-content: center;
		}

		.rank {
			gap: 8px;

			.rank-number {
				min-width: 2ch;
				text-align: right;
			}

			.rank-change {
				font-size: var(--text-very-small);
				width: 3ch;
				text-align: center;

				@media (max-width: 500px) {
					display: none;
				}

				&.positive {
					&::before {
						content: "▲";
					}
					color: #5cc639;
					[data-is-zack="true"] & {
						color: #00a800;
					}
				}
				&.negative {
					&::before {
						content: "▼";
					}
					color: #ff6673;
					[data-is-zack="true"] & {
						color: #ff5757;
					}
				}
				&:not(.positive, .negative) {
					&::before {
						content: "-";
					}
					color: var(--text-secondary);
				}
			}
		}
	}
	th {
		border-top: 1px solid var(--text-tertiary);
		&:focus-visible {
			outline-offset: -2px;
		}

		position: relative;
		.sort-icon {
			font-size: var(--text-small);

			position: absolute;
			@media (min-width: 701px) {
				top: 50%;
				left: 100%;
				transform: translateY(-50%) translateX(-125%);
			}
			@media (max-width: 700px) {
				color: rgb(from var(--accent) r g b / 0.9);
				bottom: 100%;
				left: 50%;
				transform: translateY(2px) translateX(-50%);
			}

			th:is(:hover, :focus-visible) &:not(.sorted) {
				opacity: 0.4;
			}
			th:not(:hover, :focus-visible) &:not(.sorted) {
				display: none;
			}
		}
	}
	tr {
		display: grid;
		grid-template-columns: subgrid;
		grid-column: 1 / -1;

		&:first-child {
			position: sticky;
			z-index: 1;
			top: 0;
		}
	}

	.user-header {
		height: 100%;
		display: grid;
		&:has(> :first-child:not(:last-child)) {
			grid-template-columns: 1fr auto 1fr;
		}

		> :first-child {
			justify-self: start;
			height: 24px;
			&:not(:last-child) {
				@media (max-width: 600px) {
					display: none;
				}
			}
		}
		> :last-child {
			justify-self: center;
			@media (max-width: 600px) {
				justify-self: start;
			}
		}
	}
}

